--- a/src/app/componentes/cards/cards.component.html
+++ b/src/app/componentes/cards/cards.component.html
@@ -1,5 +1,6 @@
+<app-topbar></app-topbar>
 <div class="row justify-content-md-center pt-4">
-    <div *ngFor="let minion of minions" class="card col-sm-3" style="width: 18rem;">
+    <!--<div *ngFor="let minion of minions" class="card col-sm-3" style="width: 18rem;">
         <img class="card-img-top" src="{{minion.img}}" style="height: 50%;">
         <div class="card-body">
             <h5 class="card-title rounded img-thumbnail"><b>{{minion.name}}</b></h5>
@@ -10,5 +11,5 @@
                 <b>Lado:</b> {{minion.side}}
             </p>
         </div>
-    </div>
+    </div>-->
 </div>
