--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,13 +1,13 @@
 <div class="wrapper fadeInDown">
     <div id="formContent">
-      <!-- Tabs Titles -->
   
       <!-- Login Form -->
       <form>
         <input type="text" id="login" class="fadeIn second" name="Email" placeholder="Email" [(ngModel)]="email">
         <input type="text" id="password" class="fadeIn third" name="Password" placeholder="Password" [(ngModel)]="password">
-        <input type="submit" class="fadeIn fourth" value="Log In" (click)="register()">
+        <input type="submit" class="fadeIn fourth" value="Log In" (click)="login()">
       </form>
+        <p>¿No tienes cuenta?<a (click)="navigateToRegister()">Registrate</a></p>
   
     </div>
   </div>
